--- a/style/style.css
+++ b/style/style.css
@@ -213,11 +213,22 @@ legend {
   display: block;
 }
 
+.container{
+  max-width: 960px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   padding: 20px;
   overflow: hidden;
+}
+.header__icon{
+  display: flex;
+  gap: 40px;
+  align-items: center;
 }
 .header__arrow-back,
 .header__notification {
@@ -226,6 +237,17 @@ legend {
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: flex-end;
+}
+
+.header__edit{
+  width: 24px;
+  height: 24px;
+  background: url('../img/edit.svg') no-repeat;
+  background-size: cover;
+}
+.header__close{
+  display: none;
 }
 
 .welcome {
@@ -799,10 +821,33 @@ color: #fff;
   .wrapper-tablet{
     display: flex;
   }
+  .wrapper-tablet__right{
+    flex: 1 1 calc(320 / 770 * 100%);
+  }
+  .wrapper-tablet__left{
+    flex: 1 1 calc(402 / 770 * 100%);
+    margin-top: 75px;
+  }
   .vip-concierge-block--week{
     display: none;
   }
   .weekly-bonus-block{
     margin-bottom: 48px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header {
+    justify-content: flex-end;
+  }
+  .header__arrow-back{
+    display: none;
+  }
+  .header__close{
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url('../img/close.svg') no-repeat;
+    background-size: cover;
   }
 }
