--- a/style/style.css
+++ b/style/style.css
@@ -294,23 +294,23 @@ legend {
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 18px;
-  position: relative;
+	position: relative;
 }
 .brand-selection__search::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-  cursor: pointer;
-  display: block;
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  background: url('../img/close.svg') no-repeat;
-  background-size: cover;
+	-webkit-appearance: none;
+	cursor: pointer;
+	display: block;
+	width: 16px;
+	height: 16px;
+	position: absolute;
+	top: 16px;
+	right: 16px;
+	background: url('../img/close.svg') no-repeat;
+	background-size: cover;
 }
 .brand-selection__form {
 	position: relative;
-  margin-top: 108px;
+	margin-top: 108px;
 }
 .brand-selection__header::after {
 	z-index: -1;
@@ -935,131 +935,136 @@ legend {
 }
 
 /* brand */
-.brand-selection{
-  overflow: hidden;
+.brand-selection {
+	overflow: hidden;
 }
-.brand-selection__content{
-  padding-bottom: 64px;
+.brand-selection__content {
+	padding-bottom: 64px;
 }
-.brand-selection__header{
-  overflow: visible;
-  position: relative;
-  flex-direction: column;
-  gap: 25px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgb(27,27,27);
-  opacity: 1;
-  z-index: 2;
-  width: 100%;
+.brand-selection__header {
+	overflow: visible;
+	position: relative;
+	flex-direction: column;
+	gap: 25px;
+	position: fixed;
+	top: 0;
+	/* left: 0; */
+	background-color: rgb(27, 27, 27);
+	opacity: 1;
+	z-index: 2;
+	width: 100%;
 }
-.brand-selection__header .header__arrow-back{
-  justify-content: flex-start;
-  align-self: flex-start;
-  padding: 10px 0 0 0;
+.brand-selection__header .header__arrow-back {
+	justify-content: flex-start;
+	align-self: flex-start;
+	padding: 10px 0 0 0;
 }
-.brand-selection__header .welcome{
-  padding: 0;
+.brand-selection__header .welcome {
+	padding: 0;
 }
 .brand-list__title {
 	color: rgb(194, 194, 194);
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 18px;
-  margin-bottom: 8px;
+	margin-bottom: 8px;
 }
-.brand-list__items{
-  display: grid;
-  max-width: 570px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 80px;
-  gap: 12px;
+.brand-list__items {
+	display: grid;
+	max-width: 570px;
+	grid-template-columns: repeat(3, 1fr);
+	grid-auto-rows: 80px;
+	gap: 12px;
 }
-.brand-list__item{
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  border-radius: 16px;
-  align-self: stretch;
-  cursor: pointer;
+.brand-list__item {
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	border-radius: 16px;
+	align-self: stretch;
+	cursor: pointer;
 }
-.brand-list__item--favorite{
-  border: 2px solid rgb(255,89,112);
-  position: relative;
-}
-
-.favorite-remove-btn{
-  width: 30px;
-  height: 30px;
-  background-color: rgb(27, 27, 27);
-  background-image: url(../img/remove.png);
-  background-repeat: no-repeat;
-  background-size: 22px 22px;
-  background-position: center;
-  border-radius: 50%;
-  position: absolute;
-  top: -10px;
-  right: -10px;
+.brand-list__item--favorite {
+	border: 2px solid rgb(255, 89, 112);
+	position: relative;
 }
 
-.brand-list__item--choosing{
-  border: 2px solid rgb(255,89,112);
-  position: relative;
-}
-.brand-list__item--choosing::after{
-  content: "";
-  width: 30px;
-  height: 30px;
-  background-color: rgb(27, 27, 27);
-  background-image: url(../img/ok.png);
-  background-repeat: no-repeat;
-  background-size: 22px 22px;
-  background-position: center;
-  border-radius: 50%;
-  position: absolute;
-  top: -10px;
-  right: -10px;
+.favorite-remove-btn {
+	width: 30px;
+	height: 30px;
+	background-color: rgb(27, 27, 27);
+	background-image: url(../img/remove.png);
+	background-repeat: no-repeat;
+	background-size: 22px 22px;
+	background-position: center;
+	border-radius: 50%;
+	position: absolute;
+	top: -10px;
+	right: -10px;
 }
 
-.search-brand{
-  margin-bottom: 48px;
+.brand-list__item--choosing {
+	border: 2px solid rgb(255, 89, 112);
+	position: relative;
 }
-.your-brand{
-  margin-bottom: 64px;
+.brand-list__item--choosing::after {
+	content: '';
+	width: 30px;
+	height: 30px;
+	background-color: rgb(27, 27, 27);
+	background-image: url(../img/ok.png);
+	background-repeat: no-repeat;
+	background-size: 22px 22px;
+	background-position: center;
+	border-radius: 50%;
+	position: absolute;
+	top: -10px;
+	right: -10px;
 }
-.your-brand__grid{
-  row-gap: 24px;
+
+.search-brand {
+	margin-bottom: 48px;
 }
-.brand-selection__btn-wrapp{
-  position: fixed;
-  bottom: 16px;
-  width: 100%;
-  text-align: center;
+.your-brand {
+	margin-bottom: 64px;
 }
-.btn-add-favorite{
-  max-width: 360px;
-  width: 100%;
-  padding: 19px 10px;
-  text-align: center;
-  box-shadow: inset 2px 2px 8px 0px rgb(0 0 0 / 19%);
-  background: 
-    linear-gradient(
-      90.00deg, rgb(224, 131, 60),
-      rgb(224, 72, 62) 50%,
-      rgb(196, 50, 105) 100%)
-      padding-box,
-      linear-gradient(
-        90.00deg, rgb(224, 131, 60),
-        rgb(224, 72, 62) 50%,
-        rgb(196, 50, 105) 100%) border-box;
-  border: 2px solid transparent;  
-  color: white;
-  border-radius: 100px;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 16px;
-  margin: 0 auto;
+.your-brand__grid {
+	row-gap: 24px;
+}
+.brand-selection__btn-wrapp {
+	position: fixed;
+	bottom: 16px;
+	left: 0;
+	width: 100%;
+	text-align: center;
+}
+.btn-add-favorite {
+	max-width: 360px;
+	width: 100%;
+	padding: 19px 10px;
+	text-align: center;
+	box-shadow: inset 2px 2px 8px 0px rgb(0 0 0 / 19%);
+	background: linear-gradient(
+				90deg,
+				rgb(224, 131, 60),
+				rgb(224, 72, 62) 50%,
+				rgb(196, 50, 105) 100%
+			)
+			padding-box,
+		linear-gradient(
+				90deg,
+				rgb(224, 131, 60),
+				rgb(224, 72, 62) 50%,
+				rgb(196, 50, 105) 100%
+			)
+			border-box;
+	border: 2px solid transparent;
+	color: white;
+	border-radius: 100px;
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 16px;
+	margin: 0 auto;
 }
 
 .bg-cs-bottom::after {
@@ -1076,6 +1081,34 @@ legend {
 }
 
 /* адоптив */
+@media (min-width: 600px) {
+	.brand-selection__header {
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+		max-width: 794px;
+		margin: 0 auto;
+	}
+	.brand-selection__header .header__arrow-back {
+		padding: 10px;
+		padding-left: 0;
+	}
+	.brand-selection__form {
+		margin-top: 80px;
+	}
+	.brand-selection__content {
+		max-width: 794px;
+		margin: 0 auto;
+	}
+	.brand-list__items {
+		max-width: 794px;
+		grid-template-columns: repeat(4, 1fr);
+		grid-auto-rows: 97px;
+	}
+	.bg-cs-bottom::after {
+		right: 0;
+	}
+}
 @media (min-width: 768px) {
 	.tabs {
 		display: none;
@@ -1103,9 +1136,9 @@ legend {
 		margin-bottom: 48px;
 	}
 
-  .brand-selection{
-    overflow: visible;
-  }
+	.brand-selection {
+		overflow: visible;
+	}
 }
 
 @media (min-width: 1024px) {
@@ -1121,5 +1154,20 @@ legend {
 		height: 24px;
 		background: url('../img/close.svg') no-repeat;
 		background-size: cover;
+	}
+
+	.brand-selection__content {
+		max-width: 730px;
+		margin: 0 auto;
+	}
+	.brand-list__items {
+		max-width: 730px;
+		grid-template-columns: repeat(5, 1fr);
+	}
+	.brand-selection .header__arrow-back{
+		display: block;
+	}
+	.brand-selection .header{
+		justify-content: flex-start;
 	}
 }
